Added Sega Genesis icon, added export all functionality

--- a/VGCatalog/MainForm.resx
+++ b/VGCatalog/MainForm.resx
@@ -177,4 +177,100 @@
   <metadata name="ttipMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>121, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAAAAEAIACoEAAAJgAAABAQAAABACAAaAQAAM4QAAAoAAAAIAAAAEAAAAABACAAAAAAAAAQ
+        AAAAAAAAAAAAAAAAAAAAAAAA////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AAQEB/wEB
+        Af8BAQH/AQEB/wEBAf8BAQH/AQEB/wEBAf8BAQH/AQEB/wEBAf8BAQH/AQEB/wEBAf8BAQH/AQEB/wEB
+        Af8BAQH/AQEB/wEBAf8BAQH/AQEB/wEBAf8BAQH/AQEB/wEBAf8BAQH/AQEB/wEBAf8BAQH/////AAIC
+        Av8JCQf/CQkH/wkJB/8JCQf/CQkH/wkJB/8JCQf/CQkH/wkJB/8JCQf/CQkH/wkJB/8JCQf/CQkH/wkJ
+        B/8JCQf/CQkH/wkJB/8JCQf/CQkH/09GQP9PRkD/CQkH/wkJB/9PRkD/T0ZA/wkJB/8JCQf/CQkH/wkJ
+        B/8CAgL/AgIC/x4bGP8eGxj/LSkn/y0pJ/8tKSf/LSkn/y0pJ/8tKSf/LSkn/y0pJ/8eGxj/HhsY/x4b
+        GP8eGxj/HhsY/x4bGP8eGxj/HhsY/x4bGP8eGxj/AgIC/wICAv9PRkD/HhsY/wICAv8CAgL/T0ZA/x4b
+        GP8eGxj/HhsY/wICAv8CAgL/KSQh/ykkIf9mWVD/ZVhP/2JWTP9hVUv/XlFK/1xQSf9aT0b/VktE/z43
+        Mv9USUH/UUY//1BFPv9PRD7/TEM+/2ZZUP9mWVD/ZllQ/2ZZUP9mWVD/Qzw2/0E6Nf8/ODT/Pjcy/z43
+        Mv8+NzL/Pjcy/z43Mv8+NzL/AgIC/wICAv8pJCH/KSQh/2ZZUP/l4N3/5eDd/2JWTP/19PP///////X0
+        8/9WS0T/Pjcy/1VKQ/9USUH/UUY//2ZZUP9mWVD/FhQU/xYUFP8WFBT/FhQU/xYUFP9mWVD/ZllQ/0E6
+        Nf8/ODT/Pjcy/z43Mv8+NzL/Pjcy/z43Mv8CAgL/AgIC/ykkIf8pJCH/aVxU/zw8rP88PKz/ZVhP/6KQ
+        g/+ikIP/opCD/1pPRv8pJCH/VktE/2ZZUP9mWVD/FhQU/xYUFP8WFBT/FhQU/xYUFP8WFBT/FhQU/xYU
+        FP8WFBT/ZllQ/2ZZUP8/ODT/Pjcy/z43Mv8+NzL/Pjcy/wICAv8CAgL/KSQh/ykkIf9tXlX/IR0c/yEd
+        HP9mWVD/ZVhP/4h2af+Ec2b/XFBJ/ykkIf9mWVD/FhQU/xYUFP8pJCH/NTWn/1xE0P9cRND/XETQ/1xE
+        0P9cRND/NTWn/ykkIf8WFBT/FhQU/2ZZUP8/ODT/Pjcy/z43Mv8+NzL/AgIC/wICAv8pJCH/KSQh/29g
+        Vv8CAgL/AgIC/2lcVP8hHRz/PDys/yEdHP9eUUr/KSQh/xYUFP8pJCH/KSQh/xYUFP9cRND/NTWn/zU1
+        p/81Naf/NTWn/zU1p/9cRND/FhQU/ykkIf8pJCH/FhQU/2ZZUP8/ODT/Pjcy/z43Mv8CAgL/AgIC/ykk
+        If8pJCH/cGFY/3BhWP9vYFb/bV5V/2lcVP9mWVD/ZVhP/2FVS/8WFBT/KSQh/xYUFP8WFBT/VElB/xYU
+        FP8WFBT/FhQU/xYUFP8WFBT/FhQU/xYUFP84Mi3/FhQU/xYUFP8pJCH/FhQU/2ZZUP8+NzL/Pjcy/wIC
+        Av8CAgL/opCD/3ZmXP9zYln/cGFY/29gVv9tXlX/aVxU/2ZZUP9lWE//YlZM/xYUFP8WFBT/ZVhP/2BU
+        S/9aT0b/FhQU/xYUFP/s6ef/29XP/+zp5/8WFBT/FhQU/zo0Lv84Mi3/NS4q/xYUFP8WFBT/ZllQ/z84
+        NP8+NzL/AgIC/wICAv8CAgL/opCD/6KQg/+ikIP/opCD/6KQg/+ikIP/opCD/6KQg/8WFBT/FhQU/3Ni
+        Wf9tXlX/ZVhP/2BUS/8WFBT/FhQU/3ZmXP8pJCH/cGFY/xYUFP8WFBT/PTUv/zo0Lv84Mi3/NS4q/xYU
+        FP8WFBT/opCD/6KQg/8CAgL/AgIC/3VlWv8DAwP/AwMD/wMDA/8CAgL/AgIC/wICAv8CAgL/AgIC/xYU
+        FP8CAgL/dmZc/3NiWf9tXlX/ZVhP/xYUFP8WFBT/FhQU/xYUFP8WFBT/FhQU/xYUFP8/ODT/PTUv/zo0
+        Lv84Mi3/AgIC/xYUFP8CAgL/FhQU/wICAv8CAgL/AwMD/3VlWv91ZVr/dWVa/yEdG/8hHRv/IR0b/yEd
+        G/8hHRv/AgIC/4RzZv92Zlz/c2JZ/21eVf9lWE//FhQU/xYUFP8WFBT/FhQU/xYUFP8WFBT/FhQU/z84
+        NP89NS//OjQu/zgyLf84Mi3/AgIC/y0oJf8WFBT/AgIC/wICAv91ZVr/AwMD/wMDA/8DAwP/Ix4d/yMe
+        Hf8jHh3/Ix4d/yMeHf8CAgL/hHNm/3xtYf92Zlz/c2JZ/21eVf9lWE//YFRL/1pPRv9USUH/UEU+/0xD
+        Pv9JPjr/Qzw2/z84NP89NS//OjQu/zgyLf8CAgL/LSgl/xYUFP8CAgL/AgIC/wMDA/91ZVr/dWVa/3Vl
+        Wv8lIB3/JSAd/yUgHf8lIB3/JSAd/wICAv+Ec2b/fG1h/3xtYf/Lysr/8fHx/8vKyv/X1tb/y8rK/6mb
+        kv/X1tb/y8rK/9fW1v/x8fH/y8rK/z84NP89NS//ODIt/wICAv8tKCX/FhQU/wICAv8CAgL/dWVa/wMD
+        A/8DAwP/AwMD/yciH/8nIh//JyIf/yciH/8nIh//AgIC/4h2af+Ec2b/hHNm/3x4df/x8fH/19bW/97e
+        3v/////////////////X1tb/y8rK//Hx8f9ubm7/Qzw2/z84NP86NC7/AgIC/y0oJf8WFBT/AgIC/wIC
+        Av8DAwP/dWVa/3VlWv91ZVr/KSQh/ykkIf8pJCH/KSQh/ykkIf8CAgL/jXlt/4h2af+Idmn/hHNm/3xt
+        Yf92Zlz/c2JZ/1pPRv9aT0b/Wk9G/1pPRv9USUH/UEU+/0xDPv9JPjr/Qzw2/z01L/8CAgL/LSgl/xYU
+        FP8CAgL/AgIC/3VlWv8DAwP/AwMD/wMDA/8rJiP/KyYj/ysmI/8rJiP/KyYj/wICAv+mlIf/jXlt/415
+        bf8pJCH/KSQh/ykkIf8pJCH/KSQh/ykkIf8pJCH/KSQh/ykkIf8pJCH/KSQh/0xDPv9JPjr/YVVM/wIC
+        Av8tKCX/FhQU/wICAv8CAgL/AwMD/3VlWv91ZVr/dWVa/y0oJf8tKCX/LSgl/y0oJf8tKCX/AgIC/9DI
+        wv+Tf3P/KSQh/29gVv/PxLz/z8S8/8/EvP/PxLz/z8S8/8/EvP/PxLz/z8S8/8/EvP9WS0T/KSQh/0xD
+        Pv+5s6z/AgIC/y0oJf8WFBT/AgIC/wICAv91ZVr/AwMD/wMDA/8DAwP/Lyom/y8qJv8vKib/Lyom/y8q
+        Jv8yKyj/AgIC/9DIwv8WFBT/KSQh/ykkIf8pJCH/KSQh/ykkIf8pJCH/KSQh/ykkIf8pJCH/KSQh/ykk
+        If8WFBT/ubOs/wICAv8tKCX/LSgl/xYUFP8CAgL/AgIC/wMDA/91ZVr/dWVa/3VlWv8yKyj/Miso/zIr
+        KP8yKyj/Miso/zMsKf8CAgL/0MjC/6KQg/+Tg3b/k39z/415bf+Idmn/hHNm/3xtYf92Zlz/c2JZ/21e
+        Vf9lWE//YFRL/2BUS/+5s6z/AgIC/y0oJf8tKCX/FhQU/wICAv8CAgL/n4uA/wMDA/8DAwP/AwMD/zMs
+        Kf8zLCn/Mywp/zMsKf8zLCn/Mywp/zMsKf8CAgL/0MjC/5ODdv+Tf3P/jXlt/4h2af+Ec2b/fG1h/3Zm
+        XP9zYln/bV5V/2VYT/9gVEv/ubOs/wICAv8tKCX/LSgl/5+LgP8WFBT/AgIC/////wADAwP/n4uA/5+L
+        gP+fi4D/n4uA/5+LgP+fi4D/n4uA/5+LgP+fi4D/n4uA/5+LgP8CAgL/3tbQ/97W0P+un5L/taWV/7Ce
+        k/+qmIv/pZOF/56OgP+YiHn/0MjC/9DIwv8CAgL/n4uA/5+LgP+fi4D/n4uA/wMDA/////8A////AP//
+        //8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/AwMD/97W
+        0P/e1tD/3tbQ/97W0P/e1tD/3tbQ/97W0P8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/////////
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8AAgIC/wICAv8CAgL/AgIC/wICAv8CAgL/AgIC/////wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP////////////////////+AAAABAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAgAAAAYAAAAH//wH/////////////////KAAAABAAAAAgAAAAAQAgAAAA
+        AAAABAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AQ0NCvwUFBP8FBQT/BQUE/wUFBP8FBQT/BQUE/wUF
+        BP8FBQT/BQUE/xYUEv8WFBL/FhQS/xYUEv8FBQT/Q0NCvxIQD/82MCz/SEA6/0Y+OP9EPDf/NzEt/zgx
+        LP82Lyv/OzQv/0I6NP87My7/NS8r/ycjIP8zLSn/Likl/xgVE/8VExH/SD85/5COxP+XjIT/zsS+/0U9
+        N/9ZTUb/TEM8/yolI/8WFBT/FhQU/z42Mv9TSUL/Pjcy/z43Mv8gHBr/FRMR/0tBO/8RDw//VUpD/1pQ
+        Zf9DOjX/Likm/x8cGv9IPLv/SDy7/0g8u/80LGv/Hxwa/0g/Ov8+NzL/IBwa/zMuKv9gU0v/b2BX/2td
+        VP9lWE//OzQv/y4pJv9JQDn/FhQU/3x5d/9LSUj/JyMg/yYiH/8aGBf/UkhB/yAcGv8eGhj/UklD/1JJ
+        Qv9SSUL/UklC/xEPD/9yYlj/ZVhP/xYUFP8yLCn/LCcl/yolIv86My7/IR0b/zQuK/8vKib/HxsY/zw0
+        Lv8vKCX/Ih0c/yIdHP9DOjT/dmZc/2xdVP88NTD/NjAr/zIsKf84MS7/PDUw/zgyLf8XFRP/DAsL/x8b
+        GP88NC7/MSom/yYhHv8mIR7/RDs0/4BwY//Kycj/1dXV/9zY1v/e3d3/4eDg/25raP87NC//FxUT/wwL
+        C/8fGxj/PDQu/zMsKP8qJSL/KiUi/01EPv+Kd2v/VEpC/05EPf9BOTP/QTkz/z01MP9COjX/SkE6/xcV
+        E/8MCwv/HxsY/zw0Lv81Lir/Likl/y4pJf9BPTv/aF9a/2RbVf98dG7/fHRu/3x0bv98dG7/Lykm/3Bq
+        Zv8iHhz/DAsL/ykkIf88NC7/Ny8r/zIrKP8yKyj/JiEf/5GIgv+TgXT/indr/4BwY/90ZFr/aVtS/3Zr
+        Y/86NzX/SUA7/wwLC//AwMB+UUdB/1FHQf9RR0H/UUdB/1FHQf8pJCL/cGxp/8e8sf/FuK//v7Op/5KK
+        g/82NDL/UUdB/1FHQf/AwMB+////AP///wD///8A////AP///wD///8A////AP///wCBgYF+gYGBfoGB
+        gX6/v78/////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD//wAA//8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAgAEAAP//AAD//wAA
+</value>
+  </data>
 </root>
